name:                jsontools
version:             0.0.1.0
synopsis:            TODO Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Prillan/haskell-jsontools
license:             BSD3
license-file:        LICENSE
author:              Rasmus Précenth
maintainer:          prillan91@gmail.com
copyright:           2010 Author Here
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     JPrelude
                       Data.Json
                       Data.Json.Path
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.8 && < 1
                     , json >= 0.9 && < 0.10
                     , json-stream >= 0.4 && < 0.5
                     , lens
                     , lens-aeson >= 1.0 && < 1.1
                     , parsec >= 3.1 && < 3.2
                     , semigroups >= 0.16 && < 0.17
                     , text >= 1.2 && < 1.3
                     , unordered-containers >= 0.2 && < 0.3
  extensions:          OverloadedStrings

executable jgrep
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app/jgrep
  main-is:             Main.hs
  other-modules:       Options
  build-depends:       base
                     , aeson
                     , ansi-terminal
                     , array
                     , bytestring
                     , json-stream
                     , jsontools
                     , regex-tdfa
                     , optparse-applicative
                     , text
                     , unordered-containers
                     , vector

executable jextract
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app/jextract
  main-is:             Main.hs
  other-modules:       Options
  build-depends:       base
                     , aeson
                     , ansi-terminal
                     , array
                     , bytestring
                     , json-stream
                     , jsontools
                     , regex-tdfa
                     , optparse-applicative
                     , text
                     , unordered-containers
                     , vector
  extensions:          OverloadedStrings

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jsontools
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/Prillan/haskell-jsontools
